z_non-application/internal-http-https-redirect.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect-http-to-https
  namespace: gateway-infra
spec:
  parentRefs:
  - namespace: gateway-infra
    name: gke-internal-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
